--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "otp_api",
+  "name": "tastybytes-otp-api",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.16.3",
-    "nodemailer": "^6.9.3"
+    "mongoose": "^6.0.12",
+    "nodemailer": "^6.6.3"
   }
 }
