--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^4.18.2",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.6.3"
